<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="app_name">Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="title_editHillfort">Edit Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="hint_EnterHillfortTitle">Please Fill In All Above Fields!</string>
    <string name="button_saveHillfort">Save Hillfort</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfortImage">Select Hillfort Image</string>
    <string name="change_hillfortFirstImage">Change Hillfort Image</string>
    <string name="change_hillfortSecondImage">Change Second Hillfort Image</string>
    <string name="change_hillfortThirdImage">Change Third Hillfort Image</string>
    <string name="change_hillfortFourthImage">Change Fourth Hillfort Image</string>
    <string name="button_setLocation">Set Location</string>
    <string name="title_activityMaps">Map</string>
    <string name="title_HillfortList">Hillfort List</string>
    <string name="title_HillfortAdd">Add Hillfort</string>
    <string name="toast_InvalidCreds">Incorrect Email or Password!</string>
    <string name="name">Name</string>
    <string name="promptSignUp">Not Signed Up Yet? Sign Up Below</string>
    <string name="logoutPrompt">Are you sure you would like to log out?</string>
    <string name="title_splashscreen">Splashscreen</string>
    <string name="title_HillfortLogin">Hillfort Login</string>
    <string name="infoTag">Information</string>
    <string name="imageTag">Images (Up To 4)</string>
    <string name="mapTag">Location</string>
    <string name="button_deleteHillfort">Delete Hillfort</string>
    <string name="deletePrompt">Are you sure you want to delete this Hillfort?</string>
    <string name="registerTitle">Register</string>
    <string name="title_Register">Hillfort User Register</string>
    <string name="hint_SucessfullRegister">Registration Sucessfull!</string>
    <string name="err_UserExists">User with the entered email already exists!</string>
    <string name="hint_hillfortadditionalNotes">Additional Notes</string>
    <string name="visitedTag">Visited</string>
    <string name="radio_Visited">Visited</string>
    <string name="date_Visited">Date Visited: (Not Visited Yet)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settingsTitle">Settings</string>
    <string name="changeUserTitle">Change Credentials</string>
    <string name="changeUserName">Name</string>
    <string name="button_SaveEditUser">Save</string>
    <string name="changeUserEmail">Email</string>
    <string name="changePassword">Password</string>
</resources>
