<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.activities.HillfortActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/infoTag"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/hillfortTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_hillfortTitle"
                    android:inputType="textCapSentences"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="10dip"
                    android:ems="150"
                    android:gravity="left|top"
                    android:hint="@string/hint_hillfortDescription"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/additionalNotes"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="10dip"
                    android:ems="150"
                    android:gravity="left|top"
                    android:hint="@string/hint_hillfortadditionalNotes"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <Switch
                    android:id="@+id/visitedSwitch"
                    android:layout_width="384dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/radio_Visited"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/dateVisited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:textStyle="italic"
                    android:visibility="gone"
                    android:layout_marginRight="10dip"
                    android:text="@string/date_Visited" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/imageTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/imageTag"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/hillfortFirstImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/chooseFirstImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/hillfortSecondImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/chooseSecondImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/hillfortThirdImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/chooseThirdImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/hillfortFourthImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/chooseFourthImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/mapTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/mapTag"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/hillfortLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_setLocation"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addHillfort"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@android:color/holo_red_dark"
                    android:stateListAnimator="@null"
                    android:text="@string/button_deleteHillfort"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>